# muma-rust

./: .gitignore  Cargo.toml
muma-api/: Cargo.toml  README.md
muma-api/src/: broadcaster.rs  main.rs  realtime.rs  stream.rs
muma-config/: Cargo.toml
muma-config/src/: lib.rs
muma-db/: Cargo.toml  README.md
muma-db-entity/: Cargo.toml  README.md
muma-db-entity/src/: user.rs
muma-db-migration/: Cargo.toml  README.md
muma-db-migration/src/: lib.rs  m20230722_201310_create_user.rs  m20230724_015050_create_restaurant.rs  main.rs
muma-db-sqlx/: Cargo.toml  README.md
muma-db-sqlx/migrations/: 20230727004334_create_user.sql
muma-db-sqlx/src/: lib.rs  main.rs  user.rs
muma-db/.sqlx/: query-4ae2e0d62e06d92a02e727b8d990a1a9f5ad9462c32b77e84fcdf0daf93db144.json  query-5fe8b356fe4a4d6a2e8f1412a3659532cc9489b0bfc5278f64a07031e1a62e3e.json
muma-db/migrations/: 20230801024144_create_user.up.sql
muma-db/src/: db.rs  lib.rs  main.rs  restaurant.rs  user.rs
muma-db/src/entity/: restaurant.rs
muma-db/src/model/: mod.rs  restaurant.rs
muma-db/src/query/: restaurant.rs
muma-realtime/: Cargo.toml
muma-realtime/src/: lib.rs  realtime.rs  stream.rs
