[workspace]

members = ["muma-api", "muma-config", "muma-db"]

[workspace.dependencies]
actix-web = { version = "4", features = ["openssl"] }
anyhow = { version = "1.0.72" }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.104" }
sqlx = { version = "0.7", features = [
    "mysql",
    "chrono",
    "runtime-tokio",
    "tls-rustls",
] }
