[package]
name = "muma-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
anyhow = "1.0.72"
muma-db = { path = "../muma-db" }
openssl = { version = "0.10", features = ["v110"] }
serde = { version = "1.0", features = ["derive"] }
