[package]
name = "muma-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4", features = ["openssl"] }
anyhow = { workspace = true }
bytes = "1.4.0"
futures = "0.3.28"
muma-config = { path = "../muma-config" }
muma-db = { path = "../muma-db" }
openssl = { version = "0.10", features = ["v110"] }
serde = { workspace = true }
serde_json = "1.0.104"
tokio = "1.29.1"
