[package]
name = "muma-db-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
async-std = { version = "1", features = ["attributes", "tokio1"] }
clap = { version = "4.3.19", features = ["derive"] }
muma-db = { path = "../muma-db" }

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
]
