[package]
name = "muma-db-sqlx"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "tls-rustls"] }
