[package]
name = "muma-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.72"
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = "0.4.26"
dotenvy = "0.15.7"
log = "0.4.19"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-actix-rustls", "with-chrono", "with-json", "with-uuid" ] }
serde = "1.0.174"
