[package]
name = "muma-realtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
bytes = "1.4.0"
bytestring = "1.3.0"
futures = "0.3.28"
futures-core = "0.3.28"
parking_lot = "0.12.1"
pin-project-lite = "0.2.12"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.30.0"
